chore: fix of broken tests and deprecated primitive creation